--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -2,7 +2,7 @@ name: Job Assistant
 
 on:
   schedule:
-    # Runs at 05:00 & 15:00 UTC = 08:00 & 18:00 Israel Time
+    # Runs at 05:00 and 15:00 UTC = 08:00 and 18:00 IST
     - cron: '0 5,15 * * *'
   workflow_dispatch:
 
@@ -11,23 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Reconstruct service account JSON
-        run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > credentials.json
+        run: |
+          echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > credentials.json
 
-      - name: Export secrets
+      - name: Export secrets to env
         run: |
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
           echo "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}" >> $GITHUB_ENV
@@ -36,7 +36,7 @@ jobs:
           echo "GMAIL_PASSWORD=${{ secrets.GMAIL_PASSWORD }}" >> $GITHUB_ENV
           echo "GOOGLE_SHEETS_ID=${{ secrets.GOOGLE_SHEETS_ID }}" >> $GITHUB_ENV
           echo "GOOGLE_CREDENTIALS_JSON=credentials.json" >> $GITHUB_ENV
-          echo "EMAIL_FROM=${{ secrets.EMAIL_FROM }}" >> $GITHUB_ENV
 
-      - name: Run job assistant
-        run: python job_assistant.py
+      - name: Run assistant
+        run: |
+          python job_assistant.py
