--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -2,7 +2,7 @@ name: Job Assistant
 
 on:
   schedule:
-    # Runs at 05:00 and 15:00 UTC = 08:00 and 18:00 IST
+    # Runs at 05:00 & 15:00 UTC = 08:00 & 18:00 Israel Time
     - cron: '0 5,15 * * *'
   workflow_dispatch:
 
@@ -11,23 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Reconstruct service account JSON
         run: |
-          echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > credentials.json
+          cat <<EOF > credentials.json
+${{ secrets.SERVICE_ACCOUNT_JSON }}
+EOF
 
-      - name: Export secrets to env
+      - name: Export secrets
         run: |
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
           echo "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}" >> $GITHUB_ENV
@@ -36,7 +39,7 @@ jobs:
           echo "GMAIL_PASSWORD=${{ secrets.GMAIL_PASSWORD }}" >> $GITHUB_ENV
           echo "GOOGLE_SHEETS_ID=${{ secrets.GOOGLE_SHEETS_ID }}" >> $GITHUB_ENV
           echo "GOOGLE_CREDENTIALS_JSON=credentials.json" >> $GITHUB_ENV
+          echo "EMAIL_FROM=${{ secrets.EMAIL_FROM }}" >> $GITHUB_ENV
 
-      - name: Run assistant
-        run: |
-          python job_assistant.py
+      - name: Run job assistant
+        run: python job_assistant.py
