--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -24,11 +24,11 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Reconstruct service account JSON
-        run: |
-          cat <<EOF > credentials.json
-${{ secrets.SERVICE_ACCOUNT_JSON }}
-EOF
+   - name: Reconstruct service account JSON
+     shell: bash
+     run: |
+       cat <<'EOF' > credentials.json
+
 
       - name: Export secrets
         run: |
